--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -532,14 +532,9 @@
                           <div class="wpb_wrapper">
                             <h3>Lịch sử hình thành<br />
                               &amp; phát triển</h3>
-                            <p>Nông Sản Việt ( VIỆT ACC ) là doanh nghiệp hàng đầu trong lĩnh vực Thương mại hàng Nông
-                              sản, Nguyên liệu thô, Premix và Chất phụ gia sử dụng trong ngành sản xuất thức chăn nuôi
-                              tại Việt Nam.</p>
-                            <p>Trong suốt chặng đường hình thành và phát triển, VIỆT ACC đã dần khẳng định vị thế của
-                              mình trên thương trường thông qua việc trở thành Nhà phân phối độc quyền của những thương
-                              hiệu lớn trên thế giới như DSM, Diamond V, Olmix&#8230;</p>
-                            <p>Với tiềm lực mạnh mẽ, đội ngũ nhân viên giàu kỹ năng, kinh nghiệm trong ngành chăn nuôi
-                              chính là cơ sở vững chắc để VIỆT ACC phát triển bền vững &amp; lâu dài.</p>
+                            <p>Công ty Cổ phần Đầu tư Công nghệ Minh Anh ( Minh Anh Group ) là doanh nghiệp hàng đầu trong lĩnh vực Thương mại hàng Nông sản, Nguyên liệu thô, Premix và Chất phụ gia sử dụng trong ngành sản xuất thức chăn nuôi tại Việt Nam.</p>
+                            <p>Trong suốt chặng đường hình thành và phát triển, Minh Anh Group đã dần khẳng định vị thế của mình trên thương trường thông qua việc trở thành Nhà phân phối độc quyền của những thương hiệu lớn trên thế giới như DSM, Diamond V, Olmix, Massel …&#8230;</p>
+                            <p>Với tiềm lực mạnh mẽ, đội ngũ nhân viên giàu kỹ năng, kinh nghiệm trong ngành chăn nuôi chính là cơ sở vững chắc để Minh Anh Group phát triển bền vững &amp; lâu dài.</p>
                           </div>
                         </div>
                       </div>
