--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Công Ty</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/ACC_Logo.png">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
   <link rel="apple-touch-icon" href="assets/img/ACC_Logo.png" />
   <link
     href='//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900,300italic,400italic,700italic|Roboto:100,200,300,400,500,600,700,800,900,300italic,400italic,700italic&subset=latin,latin-ext'
@@ -91,7 +91,7 @@
                       <div class="q_logo">
                         <a itemprop="url" href="/">
                           <img itemprop="image" class="normal"
-                            src="/assets/img/index/ACC_Logo.png" alt="Logo" /> <img
+                            src="/assets/img/logo_no_MA.png" alt="Logo" /> <img
                             itemprop="image" class="light"
                             src="/assets/img/index/logo.png" alt="Logo" /> <img
                             itemprop="image" class="dark"
@@ -99,7 +99,7 @@
                           <img itemprop="image" class="sticky"
                             src="/assets/img/index/logo_black.png" alt="Logo" />
                           <img itemprop="image" class="mobile"
-                            src="/assets/img/index/ACC_Logo.png" alt="Logo" /> </a>
+                            src="/assets/img/logo_no_MA.png" alt="Logo" /> </a>
                       </div>
                     </div>
                   </div>
@@ -108,12 +108,9 @@
                       <div class="header_bottom_right_widget_holder">
                         <div class="widget_text header_bottom_widget widget_custom_html">
                           <div class="textwidget custom-html-widget">
-                            <ul>
+                            <ul>                              
                               <li><img
-                                  src="/assets/img/index/phone-call copy.svg">(028)
-                                35 129 364</li>
-                              <li><img
-                                  src="/assets/img/index/email copy.svg">hello@viet-acc.com
+                                  src="/assets/img/index/email copy.svg">general@minhanhxnk.com
                               </li>
                             </ul>
                           </div>
@@ -903,18 +900,10 @@
                         <div class="wpb_wrapper">
                           <div class="wpb_text_column wpb_content_element  footer_info">
                             <div class="wpb_wrapper">
-                              <ul>
-                                <li>
-                                  <h3>HOTLINE</h3>
-                                  <p>(+842) 8 3512 9364
-                                </li>
-                                <li>
-                                  <h3>FAX</h3>
-                                  <p>(+842) 8 3512 9363
-                                </li>
+                              <ul>                                
                                 <li>
                                   <h3>EMAIL</h3>
-                                  <p>hello@viet-acc.com
+                                  <p>general@minhanhxnk.com
                                 </li>
                                 <li>
                                   <h3>ĐỊA CHỈ</h3>
@@ -939,7 +928,7 @@
                           <div class="wpb_single_image wpb_content_element vc_align_left">
                             <div class="wpb_wrapper">
                               <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="402" height="172"
-                                  src="/assets/img/index/footer.png"
+                                  src="/assets/img/logo_MA.png"
                                   class="vc_single_image-img attachment-full" alt=""
                                   srcset="/assets/img/index/footer.png 402w, /assets/img/index/footer-300x128.png 300w, /assets/img/index/footer-400x172.png 400w"
                                   sizes="(max-width: 402px) 100vw, 402px" /></div>
@@ -947,7 +936,7 @@
                           </div>
                           <div class="wpb_text_column wpb_content_element  display_desktop">
                             <div class="wpb_wrapper">
-                              <p class="p1">Copyright 2023 Minh Anh. All right reserved<br />
+                              <p class="p1">Copyright 2023 Minh Anh Group. All right reserved<br />
                                 
                             </div>
                           </div>
@@ -959,7 +948,7 @@
                         <div class="wpb_wrapper">
                           <div class="wpb_text_column wpb_content_element  footer_link">
                             <div class="wpb_wrapper">
-                              <h3>Về Viet ACC</h3>
+                              <h3>Về Minh Anh Group</h3>
                               <ul>
                                 <li><a href="#">Giới thiệu</a></li>
                                 <li><a href="#">Sản phẩm</a></li>
@@ -1016,7 +1005,7 @@
                           </div>
                           <div class="wpb_text_column wpb_content_element  display_mobile copy_right_comma">
                             <div class="wpb_wrapper">
-                              <p class="p1">Copyright 2018 Viet ACC. All right reserved<br />
+                              <p class="p1">Copyright 2023 Minh Anh Group. All right reserved<br />
                                 
                             </div>
                           </div>
